Add in Crisis Center Hero stuff in a mess

--- a/src/app/heroes/hero-detail/hero-detail.component.html
+++ b/src/app/heroes/hero-detail/hero-detail.component.html
@@ -8,5 +8,5 @@
   </div>
   <button (click)="goBack()">go back</button>
   
-  <button (click)="save()">save</button>
+  <button (click)="save(hero)">save</button>
 </div>
